# wsp-cheval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
cheval/: model.py
src/wsp_cheval/: __init__.py  api.py  core.py  exceptions.py  model.py  utils.py
src/wsp_cheval/ldf/: __init__.py  api.py  constants.py  missing_data.py
src/wsp_cheval/parsing/: ast_transformer.py  constants.py  exceptions.py  expr_items.py  expressions.py
tests/: test_core.py  test_ldf.py
